// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test unit CRUD operations The resolver handlers must work 1`] = `
Object {
  "email": "NEW EMAIL",
  "id": "test_unit_1_id",
}
`;

exports[`Test unit CRUD operations The resolver must hash the anyupp passwords for rkeeper units: CREATE 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": null,
  "externalId": "restaurantid",
  "floorMap": null,
  "groupId": null,
  "id": "rkeeper-unit",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": Object {
    "rkeeper": Object {
      "anyuppPassword": Any<String>,
      "anyuppUsername": "ANYUPP_USERNAME",
      "endpointUri": "https://testendpoint.ucs.hu/wp-json/vendor/v1",
      "rkeeperPassword": "f3e7c8260b2f9b1cc62208a441410a",
      "rkeeperUsername": "590_49_985_540",
    },
    "type": "rkeeper",
  },
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations The resolver must hash the anyupp passwords for rkeeper units: DELETE 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": null,
  "externalId": "restaurantid",
  "floorMap": null,
  "groupId": null,
  "id": "rkeeper-unit",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": Object {
    "rkeeper": Object {
      "anyuppPassword": Any<String>,
      "anyuppUsername": "ANYUPP_USERNAME",
      "endpointUri": "https://testendpoint.ucs.hu/wp-json/vendor/v1",
      "rkeeperPassword": "UPDATED_RKEEPER_PASSWORD",
      "rkeeperUsername": "590_49_985_540",
    },
    "type": "rkeeper",
  },
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations The resolver must hash the anyupp passwords for rkeeper units: RE-READ 1`] = `null`;

exports[`Test unit CRUD operations The resolver must hash the anyupp passwords for rkeeper units: READ 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": null,
  "externalId": "restaurantid",
  "floorMap": null,
  "groupId": null,
  "id": "rkeeper-unit",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": Object {
    "rkeeper": Object {
      "anyuppPassword": Any<String>,
      "anyuppUsername": "ANYUPP_USERNAME",
      "endpointUri": "https://testendpoint.ucs.hu/wp-json/vendor/v1",
      "rkeeperPassword": "f3e7c8260b2f9b1cc62208a441410a",
      "rkeeperUsername": "590_49_985_540",
    },
    "type": "rkeeper",
  },
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations The resolver must hash the anyupp passwords for rkeeper units: UPDATE 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": null,
  "externalId": "restaurantid",
  "floorMap": null,
  "groupId": null,
  "id": "rkeeper-unit",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": Object {
    "rkeeper": Object {
      "anyuppPassword": Any<String>,
      "anyuppUsername": "ANYUPP_USERNAME",
      "endpointUri": "https://testendpoint.ucs.hu/wp-json/vendor/v1",
      "rkeeperPassword": "UPDATED_RKEEPER_PASSWORD",
      "rkeeperUsername": "590_49_985_540",
    },
    "type": "rkeeper",
  },
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations Unit shoud be able to CRUD on server: CREATE 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": null,
  "externalId": null,
  "floorMap": null,
  "groupId": null,
  "id": "test_unit_1_id",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations Unit shoud be able to CRUD on server: DELETE 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": "NEW EMAIL",
  "externalId": null,
  "floorMap": null,
  "groupId": null,
  "id": "test_unit_1_id",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations Unit shoud be able to CRUD on server: RE-READ 1`] = `null`;

exports[`Test unit CRUD operations Unit shoud be able to CRUD on server: READ 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": null,
  "externalId": null,
  "floorMap": null,
  "groupId": null,
  "id": "test_unit_1_id",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations Unit shoud be able to CRUD on server: UPDATE 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": "NEW EMAIL",
  "externalId": null,
  "floorMap": null,
  "groupId": null,
  "id": "test_unit_1_id",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations Unit should be able to CRUD with direct resolvers: CREATE 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "id": "test_unit_1_id",
  "isAcceptingOrders": true,
  "isActive": true,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "orderPaymentPolicy": "prepay",
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "method": "cash",
      "type": "cash",
    },
    Object {
      "method": "card",
      "type": "card",
    },
    Object {
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "en": "Desc",
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "text": Object {
            "en": "good",
          },
          "value": 1,
        },
      ],
      "title": Object {
        "en": "Question",
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "tipPolicy": Object {
    "percents": Array [
      2,
    ],
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations Unit should be able to CRUD with direct resolvers: DELETE 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": "NEW EMAIL",
  "externalId": null,
  "floorMap": null,
  "groupId": null,
  "id": "test_unit_1_id",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations Unit should be able to CRUD with direct resolvers: RE-READ 1`] = `null`;

exports[`Test unit CRUD operations Unit should be able to CRUD with direct resolvers: READ 1`] = `
Object {
  "adBanners": null,
  "adBannersEnabled": null,
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "canCallWaiter": null,
  "canRequestVatInvoice": null,
  "categoryOrders": null,
  "chainId": null,
  "coverBanners": null,
  "coverBannersEnabled": null,
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "de": null,
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": null,
  "externalId": null,
  "floorMap": null,
  "groupId": null,
  "id": "test_unit_1_id",
  "isAcceptingOrders": true,
  "isActive": true,
  "isVisibleInApp": null,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "lastOrderNum": null,
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "merchantId": null,
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "openingHours": null,
  "orderPaymentPolicy": "prepay",
  "orderPolicy": null,
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "phone": null,
  "pos": null,
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "timeZone": null,
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Test unit CRUD operations Unit should be able to CRUD with direct resolvers: UPDATE 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "currency": "EUR",
  "description": Object {
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "email": "NEW EMAIL",
  "id": "test_unit_1_id",
  "isAcceptingOrders": true,
  "isActive": true,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "location": Object {
    "lat": 47,
    "lon": 19,
  },
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "2970-01-01",
  },
  "orderPaymentPolicy": "prepay",
  "packagingTaxPercentage": 27,
  "paymentModes": Array [
    Object {
      "method": "cash",
      "type": "cash",
    },
    Object {
      "method": "card",
      "type": "card",
    },
    Object {
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "en": "Desc",
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "text": Object {
            "en": "good",
          },
          "value": 1,
        },
      ],
      "title": Object {
        "en": "Question",
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "tipPolicy": Object {
    "percents": Array [
      2,
    ],
  },
  "updatedAt": Any<String>,
}
`;
